--- a/web/css/navbar.css
+++ b/web/css/navbar.css
@@ -1,9 +1,60 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 *{
-  padding :0;
-  margin: 0;
+    font-family: 'Poppins',sans-serif;
 }
-.logo{
-    font-size: 500px;
+.body{
+ font-family: 'Poppins', sans-serif;
+    
+}
+.navbackground{
+ width: 100px;
+}
+.navbar{
+    display: flex;
+    align-items: center;
+    padding: 10px;
 }
 
+.logo h1{
+    width: 150px;
+    height: auto;
+    margin-top: 10px;
+    font-family: 'Hannotate';
+    color: white;
+}
 
+navbarNav{
+    flex: 10;
+    text-align: right;
+    font-family: 'Poppins', sans-serif;
+}
+
+navbarNav ul{
+    
+    display: inline-block;
+    list-style-type: none;
+}
+
+navbarNav ul li{
+    font-family: 'Poppins', sans-serif;
+    display: inline-block;
+    margin-right: 1000px;
+}
+
+a{
+    text-decoration: none;
+    color: white;
+    margin-bottom: center;
+}
+
+.container{
+    max-width: auto;
+    margin: auto;
+    padding-left: 25px;
+    padding-right: 25px;
+    background-color: #24252A;
+}
+
+form.label{
+    background-color: black;
+}
